--- a/API_Sensor_Ultrassonico.ioc
+++ b/API_Sensor_Ultrassonico.ioc
@@ -1,21 +1,25 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103RBT6
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=TIM1
-Mcu.IPNb=3
+Mcu.IP3=TIM3
+Mcu.IPNb=4
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
 Mcu.Pin2=PA4
 Mcu.Pin3=PA5
-Mcu.Pin4=PA8
-Mcu.Pin5=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=6
+Mcu.Pin4=PC6
+Mcu.Pin5=PA8
+Mcu.Pin6=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin7=VP_TIM3_VS_ClockSourceINT
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -23,6 +27,7 @@ MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -31,15 +36,19 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_BRK_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=Trigger
 PA1.Locked=true
 PA1.Signal=GPIO_Output
-PA2.GPIOParameters=GPIO_Label
+PA2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PA2.GPIO_Label=Echo
+PA2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA2.Locked=true
-PA2.Signal=GPIO_Input
+PA2.Signal=GPXTI2
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=LED_1
 PA4.Locked=true
@@ -50,6 +59,8 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
+PC6.Locked=true
+PC6.Signal=S_TIM3_CH1
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -78,7 +89,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreqValue=4000000
 RCC.AHBFreq_Value=8000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -96,12 +107,21 @@ RCC.PLLMCOFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=8000000
 RCC.USBFreq_Value=8000000
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1
+SH.S_TIM3_CH1.ConfNb=1
 TIM1.IPParameters=Prescaler,Period
 TIM1.Period=0xffff - 1
 TIM1.Prescaler=8-1
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=0xffff-1
+TIM3.Prescaler=8-1
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
