--- a/API_Sensor_Ultrassonico.ioc
+++ b/API_Sensor_Ultrassonico.ioc
@@ -12,14 +12,12 @@ Mcu.IPNb=4
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA1
-Mcu.Pin1=PA2
-Mcu.Pin2=PA4
-Mcu.Pin3=PA5
-Mcu.Pin4=PC6
-Mcu.Pin5=PA8
-Mcu.Pin6=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin7=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin1=PA4
+Mcu.Pin2=PA5
+Mcu.Pin3=PA8
+Mcu.Pin4=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin5=VP_TIM3_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -27,7 +25,6 @@ MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -43,11 +40,6 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=Trigger
 PA1.Locked=true
 PA1.Signal=GPIO_Output
-PA2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PA2.GPIO_Label=Echo
-PA2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-PA2.Locked=true
-PA2.Signal=GPXTI2
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=LED_1
 PA4.Locked=true
@@ -58,8 +50,6 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
-PC6.Locked=true
-PC6.Signal=S_TIM3_CH1
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -88,7 +78,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -108,19 +98,14 @@ RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=64000000
 RCC.USBFreq_Value=64000000
-SH.GPXTI2.0=GPIO_EXTI2
-SH.GPXTI2.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
 SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1
-SH.S_TIM3_CH1.ConfNb=1
 TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM1.IPParameters=Prescaler,Period,Channel-Input_Capture1_from_TI1
 TIM1.Period=0xffff - 1
 TIM1.Prescaler=64-1
-TIM3.IPParameters=Prescaler,Period
-TIM3.Period=0xffff-1
-TIM3.Prescaler=8-1
+TIM3.IPParameters=Prescaler
+TIM3.Prescaler=64-1
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
